--- a/EventOrganizer/appsettings.json
+++ b/EventOrganizer/appsettings.json
@@ -1,12 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultDBConnection": "Server=.;Database=EventOrganizer;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    },
+    "MongoDB": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "OrganizingEvents"
+
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultDBConnection": "Server=.;Database=EventOrganizer;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-  }
 }
