--- a/EventOrganizer/EventOrganizer.csproj
+++ b/EventOrganizer/EventOrganizer.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
 	  <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 	  <PackageReference Include="ClosedXML" Version="0.104.2" />
+	  <PackageReference Include="EPPlus" Version="8.0.3" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
